# serializer version: 1
# name: TestSyncedArtifacts.test_artifacts_from_the_list_are_returned
  '''
  select *
  from codebase_embeddings
  '''
# ---
# name: TestSyncedArtifacts.test_artifacts_from_the_list_are_returned.1
  '''
  SELECT codebase_embeddings.artifact_id AS synced_artifact_id,
         argMax(codebase_embeddings.is_deleted, toTimeZone(codebase_embeddings.timestamp, 'UTC')) AS deleted
  FROM codebase_embeddings
  WHERE and(equals(codebase_embeddings.team_id, 99999), equals(codebase_embeddings.user_id, 99999), equals(codebase_embeddings.codebase_id, '019634cb-5198-0000-ab58-7ba5d8855147'), in(codebase_embeddings.artifact_id, ['file2']))
  GROUP BY codebase_embeddings.artifact_id
  HAVING ifNull(equals(deleted, 0), 0)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295
  '''
# ---
# name: TestSyncedArtifacts.test_synced_artifacts
  '''
  select *
  from codebase_embeddings
  '''
# ---
# name: TestSyncedArtifacts.test_synced_artifacts.1
  '''
  SELECT codebase_embeddings.artifact_id AS synced_artifact_id,
         argMax(codebase_embeddings.is_deleted, toTimeZone(codebase_embeddings.timestamp, 'UTC')) AS deleted
  FROM codebase_embeddings
  WHERE and(equals(codebase_embeddings.team_id, 99999), equals(codebase_embeddings.user_id, 99999), equals(codebase_embeddings.codebase_id, '019634cb-5198-0000-ab58-7ba5d8855147'), in(codebase_embeddings.artifact_id, ['file1']))
  GROUP BY codebase_embeddings.artifact_id
  HAVING ifNull(equals(deleted, 0), 0)
  LIMIT 100 SETTINGS readonly=2,
                     max_execution_time=60,
                     allow_experimental_object_type=1,
                     format_csv_allow_double_quotes=0,
                     max_ast_elements=4000000,
                     max_expanded_ast_elements=4000000,
                     max_bytes_before_external_group_by=0,
                     transform_null_in=1,
                     optimize_min_equality_disjunction_chain_length=4294967295
  '''
# ---
